--- a/krrli-github-io/src/styles.scss
+++ b/krrli-github-io/src/styles.scss
@@ -1,1 +1,29 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  background: #fde8ff;
+
+  font-family: sans-serif;
+  height: 100px;
+  line-height: 100px;
+  text-align: center;
+}
+h1 {
+  position: relative;
+  color: #fde8ff;
+
+  font-size: 5em
+}
+h1:before {
+  content: attr(data-text);
+  position: absolute;
+  overflow: hidden;
+  max-width: 7em;
+  white-space: nowrap;
+  color: #fff;
+  animation: loading 5s linear;
+}
+@keyframes loading {
+  0% {
+      max-width: 0;
+  }
+}
